# MinecraftProxy

./: .gitignore  README.md  launch.py  main.py  pyproject.toml  setup.cfg
.github/workflows/: MinecraftProxy.yml
lib/: command.py  discord_run.py  minecraft_launcher.py  minecraft_setup.py  setting.py  tasktray.py
libs/: command.py  discord_run.py  minecraft_launcher.py  minecraft_setup.py  setting.py  tasktray.py
tests/: conftest.py  test_mutex.py  test_setting.py
