[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-vv --durations=0 --capture=no"
filterwarnings = ["ignore::DeprecationWarning",]

log_cli = 1
log_cli_level = "INFO"
# log_cli_level = "DEBUG"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"

# log_file = "pytest.log"
# log_file_level = "DEBUG"
# log_file_date_format = "%Y-%m-%d %H:%M:%S"
# log_file_format = "%(asctime)s %(levelname)s %(message)s"