[metadata]
name = minecraft_proxy
version = 20220629
url = https://github.com/Trusted-Dream/MinecraftProxy
author = Trusted-Dream
long_description = file: README.md

[options]
packages = find:
install_requires=
    pip >= 21.3
    pystray
    python-dotenv
    mcrcon
    requests
    lxml
    beautifulsoup4
    discord

[options.packages.find]
where=lib